--- a/src/index.html
+++ b/src/index.html
@@ -40,48 +40,47 @@
         </div>
 
         <!-- Modal -->
-        <div class="modal p-4 rounded shadow bg-warning position-absolute top-0 end-0 mt-4 me-4" style="display: none;">
-            <h2 class="h5">Special Offer</h2>
-            <p class="mb-3">Discover our premium plans for project management.</p>
-            <button class="btn btn-primary">Learn More</button>
-        </div>
+        <div class="modal">
+            <img src="static/logos/logo.png" alt="Logo" width="50">
+            <h2>Become an affiliate</h2>
+            <p>Join Landify affiliate program and earn 25% of every purchase.</p>
+            <button>Register and start to earn</button>
+          </div>
     </section>
 
     <!-- Section 2 : Testimonials -->
-    <section id="testimonials" class="py-5 bg-white">
-        <div class="container d-flex justify-content-around">
-            <article class="testimonial text-center position-relative">
-                <img src="static/logos/picture.png" alt="Wade Wilson profile picture" class="rounded-circle mb-3" width="100" height="100">
-                <div class="bubble position-absolute p-3 bg-white rounded shadow d-none">
-                    <h2 class="h6">Become an affiliate</h2>
-                    <p>Join Landify affiliate<br>program and earn 25%<br>of every purchase</p>
-                    <button class="btn btn-primary">Register and start to earn</button>
-                </div>
-                <h3 class="h5">Wade Wilson</h3>
-                <p class="text-muted">CEO at ABC Corporation</p>
-            </article>
-            <article class="testimonial text-center position-relative">
-                <img src="static/logos/picture.png" alt="Jane Doe profile picture" class="rounded-circle mb-3" width="100" height="100">
-                <div class="bubble position-absolute p-3 bg-white rounded shadow d-none">
-                    <h2 class="h6">Become an affiliate</h2>
-                    <p>Join Landify affiliate<br>program and earn 25%<br>of every purchase</p>
-                    <button class="btn btn-primary">Register and start to earn</button>
-                </div>
-                <h3 class="h5">Jane Doe</h3>
-                <p class="text-muted">Product Manager</p>
-            </article>
-            <article class="testimonial text-center position-relative">
-                <img src="static/logos/picture.png" alt="John Smith profile picture" class="rounded-circle mb-3" width="100" height="100">
-                <div class="bubble position-absolute p-3 bg-white rounded shadow d-none">
-                    <h2 class="h6">Become an affiliate</h2>
-                    <p>Join Landify affiliate<br>program and earn 25%<br>of every purchase</p>
-                    <button class="btn btn-primary">Register and start to earn</button>
-                </div>
-                <h3 class="h5">John Smith</h3>
-                <p class="text-muted">Software Engineer</p>
-            </article>
+    <section id="testimonials" style="height: 564px; display: flex; flex-direction: column; justify-content: space-between;">
+        <h2 style="text-align: center;">Our clients speak</h2>
+        <div class="testimonial-container" style="display: flex; justify-content: space-evenly; align-items: flex-end;">
+          <article class="testimonial" style="position: relative;">
+            <img src="static/logos/picture.png" alt="Wade Wilson" style="width: 100px; height: 100px; border-radius: 50%;">
+            <h2>Wade Wilson</h2>
+            <p>CEO at ABC Corporation</p>
+            <div class="bubble" style="display: none; position: absolute; bottom: 120%; left: 50%; transform: translateX(-50%); width: 200px; background-color: #F2F2F2; border-radius: 10px; padding: 10px; text-align: center;">
+              <h2 style="font-size: 14px;">Efficient Collaborating</h2>
+              <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat nunc sem.</p>
+            </div>
+          </article>
+          <article class="testimonial" style="position: relative;">
+            <img src="static/logos/picture.png" alt="Jane Doe" style="width: 100px; height: 100px; border-radius: 50%;">
+            <h2>Jane Doe</h2>
+            <p>Product Manager</p>
+            <div class="bubble" style="display: none; position: absolute; bottom: 120%; left: 50%; transform: translateX(-50%); width: 200px; background-color: #F2F2F2; border-radius: 10px; padding: 10px; text-align: center;">
+              <h2 style="font-size: 14px;">Innovative Ideas</h2>
+              <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat nunc sem.</p>
+            </div>
+          </article>
+          <article class="testimonial" style="position: relative;">
+            <img src="static/logos/picture.png" alt="John Smith" style="width: 100px; height: 100px; border-radius: 50%;">
+            <h2>John Smith</h2>
+            <p>Software Engineer</p>
+            <div class="bubble" style="display: none; position: absolute; bottom: 120%; left: 50%; transform: translateX(-50%); width: 200px; background-color: #F2F2F2; border-radius: 10px; padding: 10px; text-align: center;">
+              <h2 style="font-size: 14px;">Great Support</h2>
+              <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat nunc sem.</p>
+            </div>
+          </article>
         </div>
-    </section>
+      </section>
 
     <!-- Section 3 : Logos -->
     <section id="logos" class="py-5 bg-light">
@@ -109,6 +108,19 @@
             <p class="mb-0">© 2021 Landify UI Kit. All rights reserved</p>
             <img src="static/logos/Social Links.png" alt="Footer Logo" class="footer-logo">
         </footer>
+
+        <script>
+            document.querySelectorAll('.testimonial img').forEach(img => {
+              img.addEventListener('mouseover', (e) => {
+                const bubble = e.target.nextElementSibling.nextElementSibling;
+                bubble.style.display = 'block';
+              });
+              img.addEventListener('mouseout', (e) => {
+                const bubble = e.target.nextElementSibling.nextElementSibling;
+                bubble.style.display = 'none';
+              });
+            });
+          </script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
